tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__BeeBreeding-AAAAAAAAAAAAAAAAAAAAEw==__Fertilizer-AAAAAAAAAAAAAAAAAAAI8g==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2290,
  "prerequisites": [
    2291,
    2292
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The Fertilizer bee will make your crop empire purr — or grow, anyways. They are a good source of Fastest production and Faster pollination as well. Breed them from Apatite and Ash.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Fertilizer",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2291,
    2292
  ],
  "rewards": [],
  "tasks": []
}
