tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__BeeBreeding-AAAAAAAAAAAAAAAAAAAAEw==__Fiendish-AAAAAAAAAAAAAAAAAAAIgg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2178,
  "prerequisites": [
    2177,
    1116
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Just like Sinister, Fiendish requires the Nether and a protective bee suit. Breed them from Sinister and Cultivated.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Fiendish",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2177,
    1116
  ],
  "rewards": [],
  "tasks": []
}
