tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__BeeBreeding-AAAAAAAAAAAAAAAAAAAAEw==__Firestone-AAAAAAAAAAAAAAAAAAADCQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 777,
  "prerequisites": [
    2184,
    2191
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Don't burn yourself.\n\n[note]It's also possible to get Firestone from the Sulfur Bee, though it has a notably smaller comb output.[/note]",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Firestone",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2184,
    2191
  ],
  "rewards": [],
  "tasks": []
}
