tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__BeeBreeding-AAAAAAAAAAAAAAAAAAAAEw==__Frugal-AAAAAAAAAAAAAAAAAAAIhQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2181,
  "optional_prerequisites": [
    2177,
    2178
  ],
  "prerequisites": [],
  "properties": {
    "auto_claim": false,
    "desc": "The Frugal bee doesn't have much direct use, but is part of many breeding lines. It will require a hot or hellish biome and arid humidity. Breed them from Modest and Sinister.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Frugal",
    "party_single_reward": false,
    "quest_logic": "OR",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "rewards": [],
  "tasks": []
}
