tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__BeeBreeding-AAAAAAAAAAAAAAAAAAAAEw==__Furious-v-1MbhJWRuiGFBX8KEvsUg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1321321503602240594,
  "prerequisites": [
    2178
  ],
  "properties": {
    "auto_claim": false,
    "desc": "If you want to pursue the breeding path toward Lapotron and Pyrotheum Bees, you'll need to start by breeding some Furious Bees. They can be bred in the nether using Fiendish and Embittered Bees, with the latter found in the wilds of the Nether.\n\nBeware: Furious Bees spawn fire charges downward, so make sure your breeding area is fireproof!",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Furious",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2178
  ],
  "rewards": [],
  "tasks": []
}
