tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__BeeBreeding-AAAAAAAAAAAAAAAAAAAAEw==__GassyBees-AAAAAAAAAAAAAAAAAAABaw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 363,
  "prerequisites": [
    2227,
    372
  ],
  "properties": {
    "auto_claim": false,
    "desc": "There is whole swarm of gas producing bees. Let's breed just one of them here. Check out NEI to see all the options you can aim for.\n\n[note]The Xenon Bee might be the most useful one. You can use it for Void Miners and potentially smelting time reductions.[/note]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Gassy Bees",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2227,
    372
  ],
  "rewards": [],
  "tasks": []
}
